test/integration/bad/tuples/bad_unpack_types.stan
transformed data {
  real x = 3.0;
  int y = 4;
  (x, y) = (y, x);
}
